--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grocery delivery | Cornershop</title>
     <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="stylesheet" href="/CSS/index-mediaqueries.css">
 </head>
 <body>
     <main class="cont-principal">
@@ -84,7 +85,7 @@
                 </ul>
             </div>
             <footer>
-                <img src="/Imagenes/Fruit_2x.jpg" alt="Imagen de frutas" class="fruit" width="320">
+                <img src="/Imagenes/Fruit_2x .jpg" alt="Imagen de frutas" class="fruit" id="frutas" width="320">
             </footer>
         </section>
         <!--Links-->
@@ -183,10 +184,10 @@
                         </li>
                     </ul>
                 </nav>
-                <section class="copyright-phrase">
-                    <p>© 2022 Cornershop by Uber</p>
-                </section>
             </div>
+            <section class="copyright-phrase">
+                <p>© 2022 Cornershop by Uber</p>
+            </section>
         </footer>
     </main>
     <script src="https://kit.fontawesome.com/dd5e87f640.js" crossorigin="anonymous"></script>
