--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,7 +27,7 @@
                 </header>
                 <h1>Tus pedidos del súper a tu puerta</h1>
                 <div class="see-stores">
-                    <a href="https://web.cornershopapp.com" onclick="">Ver tiendas</a>
+                    <a href="/HTML/listado-tiendas.html" onclick="">Ver tiendas</a>
                 </div>
                 <div class="log-in">
                     <span>¿Tienes una cuenta?
