--- a/HTML/listado-tiendas.html
+++ b/HTML/listado-tiendas.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiendas | Cornershop</title>
-    <link rel="stylesheet" href="/CSS/listado-tiendo.css">
-    <link rel="stylesheet" href="/CSS/listado-tienda-mediaqueries.css">
+    <link rel="stylesheet" href="/CSS/listado-tiendas.css">
+    <link rel="stylesheet" href="/CSS/listado-tiendas-mediaqueries.css">
     
 </head>
 <body>
