--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grocery delivery | Cornershop</title>
+    <link rel="icon" href="https://apprecs.org/ios/images/app-icons/256/a3/995060131.jpg">
     <link rel="stylesheet" href="/CSS/index.css">
     <link rel="stylesheet" href="/CSS/index-mediaqueries.css">
 </head>
