--- a/HTML/tienda-alkosto.html
+++ b/HTML/tienda-alkosto.html
@@ -65,10 +65,10 @@
                     <div class="producto">
                         <a href="">
                             <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1059583.jpg?versionId=uc5XHlwqnjyuyE015GUPK3dkbPhwsXam" alt="P.A.N., Harina de maíz blanco" width="100" height="100">
+                                <img src="https://s.cornershopapp.com/product-images/1300258.jpg?versionId=pxS5fP0mgj3dPSg1xG0NIWG9vT06Uxhe" alt="Alkosto, Azucar blanca" width="100" height="100">
                             </div>
                             <div class="producto-info">
-                                <h4>P.A.N - Harina de maiz blanco</h4>
+                                <h4>Alkosto - Azucar blanca</h4>
                                 <p>1.5$</p>
                             </div>
                         </a>
@@ -77,59 +77,11 @@
                     <div class="producto">
                         <a href="">
                             <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1059583.jpg?versionId=uc5XHlwqnjyuyE015GUPK3dkbPhwsXam" alt="P.A.N., Harina de maíz blanco" width="100" height="100">
+                                <img src="https://s.cornershopapp.com/product-images/1303481.jpg?versionId=2jlHPKK56IGLWE_B0Lt98kRzqEoBo5su" alt="Alkosto, Miel abejas dosificada" width="100" height="100">
                             </div>
                             <div class="producto-info">
                                 <h4>P.A.N - Harina de maiz blanco</h4>
-                                <p>1.5$</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1059583.jpg?versionId=uc5XHlwqnjyuyE015GUPK3dkbPhwsXam" alt="P.A.N., Harina de maíz blanco" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>P.A.N - Harina de maiz blanco</h4>
-                                <p>1.5$</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1059583.jpg?versionId=uc5XHlwqnjyuyE015GUPK3dkbPhwsXam" alt="P.A.N., Harina de maíz blanco" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>P.A.N - Harina de maiz blanco</h4>
-                                <p>1.5$</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1059583.jpg?versionId=uc5XHlwqnjyuyE015GUPK3dkbPhwsXam" alt="P.A.N., Harina de maíz blanco" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>P.A.N - Harina de maiz blanco</h4>
-                                <p>1.5$</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1059583.jpg?versionId=uc5XHlwqnjyuyE015GUPK3dkbPhwsXam" alt="P.A.N., Harina de maíz blanco" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>P.A.N - Harina de maiz blanco</h4>
-                                <p>1.5$</p>
+                                <p>3$</p>
                             </div>
                         </a>
                         <button>Agregar</button>
