--- a/HTML/tienda-locatel.html
+++ b/HTML/tienda-locatel.html
@@ -66,12 +66,12 @@
                     <div class="producto">
                         <a href="">
                             <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/4181583.jpg?versionId=bcbT4qCTo5E61vxxR0GHNNIXGtxjmDLn" alt="Abbott, Allerzitina cloruro de sodio 0.65%" width="100" height="100">
+                                <img src="https://s.cornershopapp.com/product-images/1047857.jpg?versionId=k0zyN9Nnq4ugqF7xkgy2YKaL9GfaTCOj" alt="Abbott, Sevedol migraña" width="100" height="100">
                             </div>
                             <div class="producto-info">
-                                <h4>Abbott - Allerzitina cloruro de sodio 0.65% </h4>
-                                <p>2$</p>
-                                <p>Frasco de 30 ml</p>
+                                <h4>Abbott - Sevedol migraña</h4>
+                                <p>5$</p>
+                                <p>12 tabletas</p>
                             </div>
                         </a>
                         <button>Agregar</button>
@@ -79,51 +79,12 @@
                     <div class="producto">
                         <a href="">
                             <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/4181583.jpg?versionId=bcbT4qCTo5E61vxxR0GHNNIXGtxjmDLn" alt="Abbott, Allerzitina cloruro de sodio 0.65%" width="100" height="100">
+                                <img src="https://s.cornershopapp.com/product-images/1837070.jpg?versionId=d3yMSieqDO_zcA41llBHq6VlDfeAbRY9" alt="Abbott, Allerzitina tabletas 10 mg" width="100" height="100">
                             </div>
                             <div class="producto-info">
-                                <h4>Abbott - Allerzitina cloruro de sodio 0.65% </h4>
-                                <p>2$</p>
-                                <p>Frasco de 30 ml</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/4181583.jpg?versionId=bcbT4qCTo5E61vxxR0GHNNIXGtxjmDLn" alt="Abbott, Allerzitina cloruro de sodio 0.65%" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Abbott - Allerzitina cloruro de sodio 0.65% </h4>
-                                <p>2$</p>
-                                <p>Frasco de 30 ml</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/4181583.jpg?versionId=bcbT4qCTo5E61vxxR0GHNNIXGtxjmDLn" alt="Abbott, Allerzitina cloruro de sodio 0.65%" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Abbott - Allerzitina cloruro de sodio 0.65% </h4>
-                                <p>2$</p>
-                                <p>Frasco de 30 ml</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/4181583.jpg?versionId=bcbT4qCTo5E61vxxR0GHNNIXGtxjmDLn" alt="Abbott, Allerzitina cloruro de sodio 0.65%" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Abbott - Allerzitina cloruro de sodio 0.65% </h4>
-                                <p>2$</p>
-                                <p>Frasco de 30 ml</p>
+                                <h4>Abbott - Allerzitina tabletas 10 mg</h4>
+                                <p>4$</p>
+                                <p>10 und</p>
                             </div>
                         </a>
                         <button>Agregar</button>
