--- a/HTML/tienda-macro.html
+++ b/HTML/tienda-macro.html
@@ -66,12 +66,12 @@
                     <div class="producto">
                         <a href="">
                             <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1061814.jpg?versionId=HO9GSF4w.lUApAAN7wnsMoEZjkwBquAV" alt="Café Sello Rojo, Café tostado y molido" width="100" height="100">
+                                <img src="https://s.cornershopapp.com/product-images/4867795.jpg?versionId=GK09v1QZXMGyfI8kc8rdMJujJn2uGDJ9" alt="Frutiño, Pack gelatina sabores surtidos" width="100" height="100">
                             </div>
                             <div class="producto-info">
-                                <h4>Cafe sello rojo - cafe tostado y molido</h4>
-                                <p>5$</p>
-                                <p>Bolsa de 500 g</p>
+                                <h4>Frutiño - Pack gelatinas sabores surtidos</h4>
+                                <p>10$</p>
+                                <p>4 u x 35 g c/u</p>
                             </div>
                         </a>
                         <button>Agregar</button>
@@ -79,51 +79,12 @@
                     <div class="producto">
                         <a href="">
                             <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1061814.jpg?versionId=HO9GSF4w.lUApAAN7wnsMoEZjkwBquAV" alt="Café Sello Rojo, Café tostado y molido" width="100" height="100">
+                                <img src="https://s.cornershopapp.com/product-images/1062583.jpg?versionId=CewbW1Lw2lfsaOCnwiOdiLLr_gV56acV" alt="Refisal, Sal alta pureza" width="100" height="100">
                             </div>
                             <div class="producto-info">
-                                <h4>Cafe sello rojo - cafe tostado y molido</h4>
-                                <p>5$</p>
-                                <p>Bolsa de 500 g</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1061814.jpg?versionId=HO9GSF4w.lUApAAN7wnsMoEZjkwBquAV" alt="Café Sello Rojo, Café tostado y molido" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Cafe sello rojo - cafe tostado y molido</h4>
-                                <p>5$</p>
-                                <p>Bolsa de 500 g</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1061814.jpg?versionId=HO9GSF4w.lUApAAN7wnsMoEZjkwBquAV" alt="Café Sello Rojo, Café tostado y molido" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Cafe sello rojo - cafe tostado y molido</h4>
-                                <p>5$</p>
-                                <p>Bolsa de 500 g</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1061814.jpg?versionId=HO9GSF4w.lUApAAN7wnsMoEZjkwBquAV" alt="Café Sello Rojo, Café tostado y molido" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Cafe sello rojo - cafe tostado y molido</h4>
-                                <p>5$</p>
-                                <p>Bolsa de 500 g</p>
+                                <h4>Refisal - Sal alta pureza</h4>
+                                <p>1$</p>
+                                <p>Bolsa de 1 kg</p>
                             </div>
                         </a>
                         <button>Agregar</button>
