--- a/HTML/tienda-spid.html
+++ b/HTML/tienda-spid.html
@@ -66,12 +66,12 @@
                     <div class="producto">
                         <a href="">
                             <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/6198689.jpg?versionId=VZ9lVBCHLaXYJgA3GP00_QA3w0RZu7vz" alt="Levapan, Esencia sabor a vainilla caramelo" width="100" height="100">
+                                <img src="https://s.cornershopapp.com/product-images/1061964.jpg?versionId=Tm3NHkQQQEPye8.wYGei1DR9ObBZQEGB" alt="Nescafé, Café decaf descafeinado" width="100" height="100">
                             </div>
                             <div class="producto-info">
-                                <h4>Levapan - Esencia sabor a vainilla caramelo </h4>
-                                <p>3$</p>
-                                <p>Botella 60 ml</p>
+                                <h4>Nescafe - Cafe descafeinado</h4>
+                                <p>6$</p>
+                                <p>Frasco de 100 g</p>
                             </div>
                         </a>
                         <button>Agregar</button>
@@ -79,51 +79,12 @@
                     <div class="producto">
                         <a href="">
                             <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/6198689.jpg?versionId=VZ9lVBCHLaXYJgA3GP00_QA3w0RZu7vz" alt="Levapan, Esencia sabor a vainilla caramelo" width="100" height="100">
+                                <img src="https://s.cornershopapp.com/product-images/1060734.jpg?versionId=.rjLlOi_0aIjhRjIDZ9GMcTU.0I.JKWT" alt="Maruchan, Sopa carne de res" width="100" height="100">
                             </div>
                             <div class="producto-info">
-                                <h4>Levapan - Esencia sabor a vainilla caramelo </h4>
-                                <p>3$</p>
-                                <p>Botella 60 ml</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/6198689.jpg?versionId=VZ9lVBCHLaXYJgA3GP00_QA3w0RZu7vz" alt="Levapan, Esencia sabor a vainilla caramelo" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Levapan - Esencia sabor a vainilla caramelo </h4>
-                                <p>3$</p>
-                                <p>Botella 60 ml</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/6198689.jpg?versionId=VZ9lVBCHLaXYJgA3GP00_QA3w0RZu7vz" alt="Levapan, Esencia sabor a vainilla caramelo" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Levapan - Esencia sabor a vainilla caramelo </h4>
-                                <p>3$</p>
-                                <p>Botella 60 ml</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/6198689.jpg?versionId=VZ9lVBCHLaXYJgA3GP00_QA3w0RZu7vz" alt="Levapan, Esencia sabor a vainilla caramelo" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Levapan - Esencia sabor a vainilla caramelo </h4>
-                                <p>3$</p>
-                                <p>Botella 60 ml</p>
+                                <h4>Maruchan - Sopa de res</h4>
+                                <p>2$</p>
+                                <p>Carton de 64 g</p>
                             </div>
                         </a>
                         <button>Agregar</button>
