--- a/HTML/tienda-farmatodo.html
+++ b/HTML/tienda-farmatodo.html
@@ -66,12 +66,12 @@
                     <div class="producto">
                         <a href="">
                             <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/3813222.jpg?versionId=51WAc2iC5EtY22xp7OOZxH9tSbhRsikq" alt="Abbott, Bellanew 1.5 mg/2 mg" width="100" height="100">
+                                <img src="https://s.cornershopapp.com/product-images/4238059.jpg?versionId=VdhMDaZ.kmqjkn2A2o_5AgblFEGXgyu3" alt="Abbott, Brocriptin 5 mg/2.5 mg" width="100" height="100">
                             </div>
                             <div class="producto-info">
-                                <h4>Abbott - BellaNew 1.5 mg / 2mg </h4>
-                                <p>5.5$</p>
-                                <p>28 tabletas</p>
+                                <h4>Abbott - BellaNew - Brocriptin 5 mg / 2.5 mg</h4>
+                                <p>2.5$</p>
+                                <p>10 tabletas</p>
                             </div>
                         </a>
                         <button>Agregar</button>
@@ -79,51 +79,12 @@
                     <div class="producto">
                         <a href="">
                             <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/3813222.jpg?versionId=51WAc2iC5EtY22xp7OOZxH9tSbhRsikq" alt="Abbott, Bellanew 1.5 mg/2 mg" width="100" height="100">
+                                <img src="https://s.cornershopapp.com/product-images/4568974.jpg?versionId=8K2oWyhwuvRH7kTzyE8tWCuPtMuknxu_" alt="Abbott, Candam 10 mg/16 mg" width="100" height="100">
                             </div>
                             <div class="producto-info">
-                                <h4>Abbott - BellaNew 1.5 mg / 2mg </h4>
-                                <p>5.5$</p>
-                                <p>28 tabletas</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/3813222.jpg?versionId=51WAc2iC5EtY22xp7OOZxH9tSbhRsikq" alt="Abbott, Bellanew 1.5 mg/2 mg" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Abbott - BellaNew 1.5 mg / 2mg </h4>
-                                <p>5.5$</p>
-                                <p>28 tabletas</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/3813222.jpg?versionId=51WAc2iC5EtY22xp7OOZxH9tSbhRsikq" alt="Abbott, Bellanew 1.5 mg/2 mg" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Abbott - BellaNew 1.5 mg / 2mg </h4>
-                                <p>5.5$</p>
-                                <p>28 tabletas</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/3813222.jpg?versionId=51WAc2iC5EtY22xp7OOZxH9tSbhRsikq" alt="Abbott, Bellanew 1.5 mg/2 mg" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Abbott - BellaNew 1.5 mg / 2mg </h4>
-                                <p>5.5$</p>
-                                <p>28 tabletas</p>
+                                <h4>Abbott - Candan 10 mg / 16 mg</h4>
+                                <p>10$</p>
+                                <p>30 tabletas</p>
                             </div>
                         </a>
                         <button>Agregar</button>
