--- a/HTML/tienda-jumbo.html
+++ b/HTML/tienda-jumbo.html
@@ -67,13 +67,13 @@
                     <div class="producto">
                         <a href="">
                             <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1111602.jpe?versionId=CqCXpLFuPgpp1s9pXKwwrWIXCaNXr5yS" alt="Banano urabá" width="100" height="100">
+                                <img src="https://s.cornershopapp.com/product-images/1111674.jpg?versionId=3EZvnU4z5YvQlwYEi.pL2HlE8zH4lygy" alt="Jumbo, Tomate chonto" width="100" height="100">
                             </div>
                             <div class="producto-info">
-                                <h4>Bananas</h4>
-                                <p>1$</p>
+                                <h4>Jumbo - Tomate chonto</h4>
+                                <p>1.5$</p>
                                 <p>Precio por kg</p>
-                                <p>Unidad: 500gr aprox</p>
+                                <p>Unidad: 300gr aprox</p>
                             </div>
                         </a>
                         <button>Agregar</button>
@@ -81,69 +81,13 @@
                     <div class="producto">
                         <a href="">
                             <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1111602.jpe?versionId=CqCXpLFuPgpp1s9pXKwwrWIXCaNXr5yS" alt="Banano urabá" width="100" height="100">
+                                <img src="https://s.cornershopapp.com/product-images/1111787.jpg?versionId=N.zb97lxOQZJ5OtMM9ECVSpmFBcBtHoG" alt="Cebolla cabezona" width="100" height="100">
                             </div>
                             <div class="producto-info">
-                                <h4>Bananas</h4>
-                                <p>1$</p>
+                                <h4>Cebolla cabezona</h4>
+                                <p>1.8$</p>
                                 <p>Precio por kg</p>
-                                <p>Unidad: 500gr aprox</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1111602.jpe?versionId=CqCXpLFuPgpp1s9pXKwwrWIXCaNXr5yS" alt="Banano urabá" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Bananas</h4>
-                                <p>1$</p>
-                                <p>Precio por kg</p>
-                                <p>Unidad: 500gr aprox</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1111602.jpe?versionId=CqCXpLFuPgpp1s9pXKwwrWIXCaNXr5yS" alt="Banano urabá" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Bananas</h4>
-                                <p>1$</p>
-                                <p>Precio por kg</p>
-                                <p>Unidad: 500gr aprox</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1111602.jpe?versionId=CqCXpLFuPgpp1s9pXKwwrWIXCaNXr5yS" alt="Banano urabá" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Bananas</h4>
-                                <p>1$</p>
-                                <p>Precio por kg</p>
-                                <p>Unidad: 500gr aprox</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1111602.jpe?versionId=CqCXpLFuPgpp1s9pXKwwrWIXCaNXr5yS" alt="Banano urabá" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Bananas</h4>
-                                <p>1$</p>
-                                <p>Precio por kg</p>
-                                <p>Unidad: 500gr aprox</p>
+                                <p>Unidad: 240gr aprox</p>
                             </div>
                         </a>
                         <button>Agregar</button>
