--- a/HTML/tienda-jumbo.html
+++ b/HTML/tienda-jumbo.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="contenido">
                     <div class="producto">
-                        <a href="">
+                        <a href="/HTML/producto-banana.html">
                             <div class="producto-imagen">
                                 <img src="https://s.cornershopapp.com/product-images/1111602.jpe?versionId=CqCXpLFuPgpp1s9pXKwwrWIXCaNXr5yS" alt="Banano urabá" width="100" height="100">
                             </div>
