--- a/HTML/producto-banana.html
+++ b/HTML/producto-banana.html
@@ -10,7 +10,9 @@
 <body>
     <div class="container">
         <div class="header">
-            <button>Volver a la tienda</button>
+            <a href="/HTML/listado-tiendas.html">
+                <button>Volver a la tienda</button>
+            </a>
         </div>
         <div class="cont-img">
             <img class="product-img" src="https://s.cornershopapp.com/product-images/1111602.jpe?versionId=CqCXpLFuPgpp1s9pXKwwrWIXCaNXr5yS" alt="Banano urabá" aria-hidden="true" data-displace-into-id="target-image-id" style="visibility: visible;">
